@@ -20,4 +20,5 @@ on test => sub {
    requires 'DBD::SQLite' => 0;
    requires 'Test::Fatal' => 0.006;
    requires 'DateTime::Format::SQLite' => 0;
+   requires 'aliased' => 0.34;
 };
